# sparrow

./: Cargo.toml  README.md  flake.nix
src/: main.rs  structs.rs
src/commands/: main.rs  mod.rs  music.rs  xkcd.rs
