[package]
name = "sparrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
serde_json = "1.0.103"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rspotify = "0.11.7"
songbird = "0.3.2"
serenity = { version = "0.11.6", features = [
    "client",
    "standard_framework",
    "voice",
    "rustls_backend",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
poise = "0.5.5"
log = "0.4.19"
