[package]
name = "sparrow"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "^0.15.0"
env_logger = "^0.10.0"
serde_json = "^1.0.103"
rand = "^0.8.5"
# zeroize = "1.4.0"
reqwest = { version = "^0.11.18", features = ["json"] }
# rspotify = "0.11.7"
# serenity = { version = "0.11.6", features = [
    # "client",
    # "standard_framework",
    # "voice",
    # "rustls_backend",
# ] }
tokio = { version = "^1.21.2", features = ["macros", "rt-multi-thread"] }
log = "^0.4.19"
zeroize = "1.6.0"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
branch = "next"


[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"