[package]
name = "sparrow"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "^0.15.0"
env_logger = "^0.10.0"
serde_json = "^1.0.103"
rand = "^0.8.5"
reqwest = { version = "^0.11.18", features = ["json"] }
# rspotify = "0.11.[7"
serenity = { version = "0.11.6", features = ["voice"], default-features = false}

poise = {version = "0.5.5", features = ["cache"]}
songbird = { version = "0.3.2", features = ["builtin-queue", "serenity-rustls"] }
tokio = { version = "^1.21.2", features = ["macros", "rt-multi-thread"] }
log = "^0.4.19"
